Release 0.5x.x
- Audio input delay relative to video fixed.
- Invalid config (not parsing xml) doesn't crash engine on startup.
- Send audio to preview only for render channels are displayed on preview.
- Audio artifacts after enabling video input fixed.
- Problem with silent VideoInputPlugin audio on preview fixed.

Release 0.50.0
- Rendering to shared memory enabled.
- ffmpeg library recompiled.
- Added SD resolution for Blufish video card.
- Saving config.
- Many small changes in config entries. Test and example configs updated.
- Added UIDs for nodes.
- Video input audio works.
- Changes in timelines keyframes.