@@ -1,0 +1,7 @@
+<videocard name="BlueFish" deviceID="1" referenceMode="bla bla" >
+    <channels>
+        <channel name="A" renderer="1" >
+            <output linkedVideoOutput="0" type="FILL" resolution="1080" refresh="5000" interlaced="true" flipped="true" />
+        </channel>
+    </channels>
+</videocard>
