@@ -1,4 +1,6 @@
 Release 0.5x.x
+- Changes in config - referenceV, referenceH and referenceMode are set once per video card.
+- Video Cards - Setting H and V phase and synchronization signal reference mode. Quering these informations through API (+IsLocked command).
 - Audio input delay relative to video fixed.
 - Invalid config (not parsing xml) doesn't crash engine on startup.
 - Send audio to preview only for render channels are displayed on preview.
